--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
       <input type="text" placeholder="Write a To Do and Press Enter" required>
   </form>
   <ul id="todo-list"></ul>
+  <div id="weather">
+    <span></span>
+    <span></span>
+  </div>
   <script src="./todo.js"></script>
   <script src="./weather.js"></script>
+  <script src="./weatherAPI.js"></script>
 </body>
 </html>
